--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.dbtools</groupId>
             <artifactId>dbtools-query</artifactId>
-            <version>2.5.3-SNAPSHOT</version>
+            <version>2.5.3</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
